# aiops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  system-promotion.txt  system_prompt.md  trace_log.json  update_system_prompt.md
ca/: config  ide_san.cnf  pip.conf  pylintrc.conf  root.cnf  root.crt  root.key  root.srl  server.crt  server.csr  server.key
conf/: pypirc.conf
database-tools/: LICENSE.txt  README.md  demo.sql  insert_promotion.md  pyproject.toml
database-tools/examples/json/: liquibase.properties
database-tools/examples/sql/: liquibase.properties  liquibase.psql.conf
database-tools/examples/sql/checks-packages/: liquibase.checks.data-protection.yaml
database-tools/examples/xml/: liquibase.properties  liquibase.sqlcmd.conf  liquibase.sqlplus.conf
database-tools/examples/yaml/: liquibase.properties
database-tools/examples/yaml/checks-packages/: liquibase.checks.access-control.yaml  liquibase.checks.changeset-standards.yaml  liquibase.checks.coding-standards.yaml  liquibase.checks.schema-protection.yaml
database-tools/src/database_tools/: main.py
database-tools/src/database_tools/tools/: liqubase.py
database-tools/tests/: __init__.py  test_liqubase.py
logs/: trace_log.json
mcp/: client.py  liqubase.py  log.py  process.py
prompt/: check_changeSet_prompt.md  create_changeset_prompt.md
src/aiops/: pyproject.toml
src/app/: agents.py  app.py  deepseek.py  doc2md.py  entry.py  main.py  ollamaDemo.py  sesson.py
src/app/agent/: chat.py
src/app/templates/: index.html
src/app/tracer/: tracer.py
src/config/: __about__.py
src/liquibase/: main.py
src/liquibase/agent/: check_changeset.py  create_changeset.py
src/liquibase/templates/: index.html
src/liquibase_agent/: main.py
src/liquibase_agent/agent/: baseagent.py  check_changeset.py  create_changeset.py
src/liquibase_agent/cli/: main.py
src/liquibase_agent/history/: pdf2vector.py
src/liquibase_agent/tools/: liquibase.py
src/liquibase_agent/tracer/: tracer.py
src/proxy/: config.yaml
