[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquibas-agent"
dynamic = ["version"]
description = "Liquibase agent"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["agent", "deepseek", "liquibase", "mysql"]
authors = [
    { name = "jerry", email = "jerrytekton@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=0.1.3",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Documentation = "https://github.com/jerry/liquibas-a gen t#readme"
Issues = "https://github.com/jerry/liquibas-agent/issues"
Source = "https://github.com/jerry/liquibas-agent"

[project.scripts]
liquibas_agent = "database_tools.main:run_server"

[tool.hatch.envs.default]
pip-args = ["-i", "https://pypi.tuna.tsinghua.edu.cn/simple"]
type = "virtual"
python = "3.13.2"
path = ".hatch_env"
dependencies = [
    "fastapi>=0.95",
    "uvicorn[standard]>=0.22"
]

[tool.hatch.build.targets.wheel]
packages = ["src/database_tools"]

[tool.hatch.version]
path = "src/database_tools/__about__.py"

[tool.hatch.envs.default.scripts]
start = "uvicorn database_tools.main:app --host 0.0.0.0 --port 8000 --reload"
serve = "python -m database_tools.main"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]

[tool.hatch.envs.dev]
features = [
    "dev",
    "test",
]

[tool.hatch.envs.dev.scripts]
test = "pytest"
lint = "black . && isort . && flake8"
format = "black . && isort ."
start = "uvicorn database_tools.main:app --host 0.0.0.0 --port 8000 --reload"
serve = "python -m database_tools.main"

[tool.hatch.envs.test]
features = ["test"]

[tool.coverage.paths]
database_tools = ["src/database_tools", "*/liquibas-agent/src/database_tools"]
tests = ["tests", "*/liquibas-agent/tests"]

[tool.black]
target-version = ['py38']
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]