[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# ------------------------
# Project metadata
# ------------------------
[project]
name = "liquibase_agent"
dynamic = ["version"]
description = "Liquibase Agent Service"
readme = "README.md"
requires-python = ">=3.13"


authors = [
  { name = "Jerry Liu", email = "jerrytekton@gmail.com" }
]

keywords = ["liquibase", "agent", "langchain", "mysql"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "Flask==3.1.2",
  "gunicorn>=21.0",
  "uvicorn>=0.30",

  "langchain==1.1.2",
  "langchain-openai==1.1.0",
  "langchain-google-genai==3.2.0",
  "langchain-mcp-adapters==0.1.14",

  "grpcio-status==1.76.0",
  "cryptography==46.0.3",
]


# ------------------------
# Optional dependencies
# ------------------------
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "pytest-mock>=3.0",

  "black>=23.0",
  "isort>=5.12",
  "flake8>=6.0",
  "mypy>=1.0",

  "httpx>=0.25",
  "pre-commit>=3.0",
]


# ------------------------
# Entry points
# ------------------------
[project.scripts]
liquibase-agent = "liquibase_agent.cli:main"
liquibase-agent-server = "liquibase_agent.main:run"


[project.entry-points."liquibase_agent.tools"]
liquibase = "liquibase_agent.tools.liquibase:LiquibaseTool"


# ------------------------
# Hatch build
# ------------------------
[tool.hatch.build]
packages = ["src/liquibase_agent"]


[tool.hatch.version]
path = "src/config/__about__.py"


# ------------------------
# Hatch environments
# ------------------------
[tool.hatch.envs.default]
type = "virtual"
path = ".langchain-env"

[tool.hatch.envs.default.install]
editable = true


[tool.hatch.envs.default.scripts]
start = "gunicorn liquibase_agent.main:app -k uvicorn.workers.UvicornWorker -w 4 -b 0.0.0.0:5001"
dev = "uvicorn liquibase_agent.main:app --reload --host 0.0.0.0 --port 5001"


[tool.hatch.envs.dev]
features = ["dev"]


[tool.hatch.envs.dev.scripts]
test = "pytest"
lint = "black . && isort . && flake8"
format = "black . && isort ."


# ------------------------
# Tooling configs
# ------------------------
[tool.black]
line-length = 88
target-version = ["py313"]


[tool.isort]
profile = "black"
line_length = 88


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]